# Learning-Path-Assistant-Hackathon-2025

./: .gitignore  README.md  chainlit.md  compose.yaml  default.sqlite  docker-compose.yaml  main.py  profiles.json  pyproject.toml  use_case.md
.deepeval/: .deepeval_telemetry.txt
backend/: Dockerfile  README.md  example.env  pyproject.toml
backend/data/: confluence_data.json
backend/data/confluence_markdown/: API_Basics.md  Advanced_Python.md  AirByte.md  Airflow.md  Basics_-_Learning_Path.md  BigData_basics.md  ClickHouse.md  Cloud.md  Cloud_basics.md  DBT.md  DBT_cloud_fundamentals.md  Data_Engineering_basics.md  Data_Gouvernance.md  Data_anonymisation.md  Deep_Learning.md  DevOps_-_CI_CD_pipeline.md  DevOps_basics.md  Docker_Basics.md  GCP_Basics_-_part_1.md  GCP_Basics_-_part_2.md  GD_academy_vision.md  Git_basics.md  Glue_AWS.md  Great_Expectations.md  Learning_Path_-_Cloud_Engineer.md  Learning_Path_-_Data_Engineer.md  Learning_Path_-_Machine_Learning_Engineer.md  Microservices.md  Python_basics.md  Road_map_OKR_2025.md  SQL_&_NoSQL.md  Spark_Advanced.md  Spark_Basics.md  Supervised_machine_learning.md  Terraform.md  Udemy.md  Unix_bash_basics.md  Unsupervised_Machine_Learning.md  Web_Scraping.md  cademy.md
backend/instructions/: agent_instructions.txt
backend/src/: main.py  semantic_kernal.py  stream_event_handler.py  utilities.py
backend/src/a2a/: agent.py  controller.py  executor.py
backend/src/agents/: academy_agent.py  bing_agent.py  confluence_agent.py  profile_builder_agent.py
backend/src/agents/bing_seach/: bing_search_agent.py  search_prompt_instructions.py
backend/src/agents/confluence/: academy_agent.py  academy_rag.py  ingestion.py
backend/src/agents/confluence/model/: base.py
backend/src/agents/google/: calendar.py  gmail.py
backend/src/agents/learning_path/: learning_path.py
backend/src/agents/orchestrator_agent/: instructions_system.py  semantic_kernel_agent.py
backend/src/agents/profile_builder/: profile_builder.py  profile_builder_agent.py  profile_builder_instructions.py  profile_questions.py
backend/src/agents/web_agent/: web_agent.py
backend/src/apis/: chat.py
backend/src/evaluation/: Arize_evaluation.py  DeepEval.py  commande.md  evaluate_agent.py  geval.py  technical_metrics.py  trulens_evaluation.py
backend/src/evaluation/test_data/: data.json
backend/src/evaluation/tests/: test_auth.py
backend/src/instructions/: agent_instructions.txt  instructions_syst.txt  instructions_system.py  profile_builder.txt
backend/src/mongodb/: __init__.py  base.py  client.py  mongo.py
backend/src/prompts/: academy_instructions.py  profile_builder.py  search_prompt.py
backend/src/service/profile_builder/: profile_builder.py
backend/src/storage/: __init__.py  client.py  mongo.py
backend/src/tools/confluence/: ingestion.py
backend/src/tools/profile_builder/: profile_questions.py
backend/src/utils/: config.py  stream_event_handler.py  terminal_colors.py  utilities.py
frontend/: .env.example  README.md  app.py  chainlit.md  profiles.json  users.json
frontend/apis/: routes.py
frontend/demo_app/: .env.template  app.py
frontend/src/: .env.template  app.py
frontend/src/apis/: routes.py
frontend/src/data/: users.json
notebooks/evaluation/: launch_eval.py
notebooks/evaluation/eval_tools/: g_eval.py  (+3 more)
notebooks/utils/: logging_utils.py
(+2 files in other folders)
