[project]
name = "automated-learning-paths-hackathon2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "azure-ai-projects>=1.0.0b10",
    "azure-identity>=1.21.0",
    "chainlit>=2.5.5",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]