[project]
name = "automated-learning-paths-hackathon2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "az>=0.1.0.dev1",
    "asyncio>=3.4.3",
    "atlassian-python-api>=4.0.3",
    "azure-ai-projects>=1.0.0b10",
    "azure-core-tracing-opentelemetry>=1.0.0b12",
    "azure-identity>=1.21.0",
    "azure-monitor-opentelemetry>=1.6.8",
    "azure-search-documents>=11.5.2",
    "chainlit>=2.5.5",
    "httpx>=0.28.1",
    "opentelemetry-exporter-otlp>=1.31.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "pillow>=11.2.1",
    "pip>=25.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "semantic-kernel>=1.29.0",
    "terminal-colors>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
